Signed/Unsigned jars, remove eclise cruft, towards junit3